--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
